# SparseNN

./: .gitignore  README.md  pytorch_example.py  read_weights_pth.py  requirements.txt  sparsenn_first_call.py
original/: original.py
sparse_nn/: CMakeLists.txt  base_sparse_network.py  custom_model_topython.hxx  main.cxx  main_pybind.cxx  sparse_converter.py  sparse_network.py
sparse_nn/include/: algebra.hxx  network.hxx
sparse_nn/include/algebra/: array.hxx  array_impl.hxx  base_array.hxx  base_array_impl.hxx  sparse_array.hxx  sparse_array_impl.hxx  utils.hxx  utils_impl.hxx
sparse_nn/include/network/: layers.hxx  neural_network.hxx  neural_network_impl.hxx
sparse_nn/include/network/activation_layers/: base_activation_layer.hxx  base_activation_layer_impl.hxx  flatten.hxx  flatten_impl.hxx  identity.hxx  identity_impl.hxx  logsoftmax.hxx  logsoftmax_impl.hxx  max.hxx  max_impl.hxx  relu.hxx  relu_impl.hxx  softmax.hxx  softmax_impl.hxx
sparse_nn/include/network/layers/: base_convolution.hxx  base_convolution_impl.hxx  base_layer.hxx  base_layer_impl.hxx  convolution.hxx  convolution_impl.hxx  linear.hxx  linear_impl.hxx  max_2d_pooling.hxx  max_2d_pooling_impl.hxx  max_3d_pooling.hxx  max_3d_pooling_impl.hxx  sparse_convolution.hxx  sparse_convolution_impl.hxx  sparse_linear.hxx  sparse_linear_impl.hxx
sparse_nn/python_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
sparse_nn/python_build/pybind11/: Makefile  cmake_install.cmake
sparse_nn/python_build/tests/: Makefile  cmake_install.cmake  test_array  test_array_max  test_convolution  test_flatten  test_linear  test_logsoftmax  test_max  test_max_2d_pooling  test_max_3d_pooling  test_neural_network  test_relu  test_softmax  test_sparse_array  test_sparse_convolution  test_sparse_linear  test_utils
sparse_nn/test_python/: test_SparseConverter.py  test_SparseNetwork.py
sparse_nn/tests/: CMakeLists.txt  test_array.cxx  test_array_max.cxx  test_convolution.cxx  test_flatten.cxx  test_linear.cxx  test_logsoftmax.cxx  test_max.cxx  test_max_2d_pooling.cxx  test_max_3d_pooling.cxx  test_neural_network.cxx  test_relu.cxx  test_softmax.cxx  test_sparse_array.cxx  test_sparse_convolution.cxx  test_sparse_linear.cxx  test_utils.cxx
sparse_nn/tests_python_wrap/: test_py.py
tests_wrap_python/: test_conv.py  test_maxpooling.py
